# RecipeStorage

./: CMakeLists.txt  README.md  brainstorming.drawio
inc/: ingredient.h  mainwindow.h  recipe.h  sauvegarde.h
src/: ingredient.cpp  main.cpp  mainwindow.cpp  recipe.cpp  sauvegarde.cpp
